# taskman

./: .gitignore  BUILD.md  CHANGELOG.md  CHANGELOG_USER.md  CMakeLists.txt  LICENSE  README.md  USAGE.md  USAGE_CLI.md  USAGE_MCP.md  USAGE_WEB.md  specs.md  test_agents.h  test_init.json  test_web_assets.h  todo-advanced-cli.md  todo-mcp.md  todo.md
.github/workflows/: build.yml  release.yml
adr/: 0001-defer-abstractions-and-dependency-injection.md  0002-web-ui-navigation-and-state.md  0003-web-ui-global-search.md  README.md
docs/: BUILD.md  CHANGELOG_USER.md  REFACTORING.md  USAGE_CLI.md  USAGE_MCP.md  USAGE_WEB.md  changel_user.md  changelog_user.md  usage.md  usage_cli.md  usage_mcp.md  usage_web.md  users.md
docs/roles_agents/: README.md  art-director.md  community-manager.md  developer.md  devops-engineer.md  documentation-writer.md  product-owner.md  project-designer.md  project-manager.md  qa-engineer.md  security-engineer.md  software-architect.md  summary-writer.md  taskman-product-owner.md  taskman-software-architect.md  taskman-summary-writer.md  ui-designer.md  ux-designer.md
embed/roles_agents/: README.md  taskman-art-director.md  taskman-community-manager.md  taskman-developer.md  taskman-devops-engineer.md  taskman-documentation-writer.md  taskman-product-owner.md  taskman-project-designer.md  taskman-project-manager.md  taskman-qa-engineer.md  taskman-security-engineer.md  taskman-software-architect.md  taskman-summary-writer.md  taskman-ui-designer.md  taskman-ux-designer.md
embed/rules/: commit-message.mdc  design-patterns.mdc  raii.mdc  solid-principles.mdc  task-creation.mdc  taskman-mcp-usage.mdc
embed/web/: dom.js  filters.js  main.js  style.css  url-state.js
scripts/: create_demo.py  embed_agents.py  embed_assets.py  embed_rules.py  github_release.py
src/: agents.hpp  command.hpp  commands.cpp  db.cpp  db.hpp  demo.cpp  demo.hpp  formats.cpp  formats.hpp  main.cpp  mcp.cpp  mcp_config.cpp  mcp_protocol_handler.cpp  mcp_tool_executor.cpp  mcp_tool_registry.cpp  mcp_tool_registry.hpp  milestone.cpp  milestone.hpp  milestone_command_parser.cpp  milestone_command_parser.hpp  milestone_formatter.cpp  milestone_formatter.hpp  milestone_repository.cpp  milestone_repository.hpp  note.cpp  note.hpp  note_command_parser.cpp  note_repository.cpp  note_repository.hpp  note_service.hpp  phase.cpp  phase.hpp  phase_command_parser.hpp  phase_formatter.hpp  phase_repository.cpp  phase_repository.hpp  phase_service.hpp  roles.cpp  roles.hpp  task.cpp  (+11 more)
src/cli/: command.cpp  commands.cpp
src/core/milestone/: milestone.cpp  milestone_formatter.hpp  milestone_repository.hpp  milestone_service.cpp  milestone_service.hpp
src/core/note/: note.cpp  note.hpp  note_command_parser.cpp  note_command_parser.hpp  note_formatter.cpp  note_formatter.hpp  note_repository.cpp  note_repository.hpp  note_service.cpp  note_service.hpp
src/core/phase/: phase.cpp  phase.hpp  phase_command_parser.cpp  phase_formatter.cpp  phase_formatter.hpp  phase_repository.hpp  phase_service.cpp
src/core/task/: task.cpp  task.hpp  task_command_parser.cpp  task_command_parser.hpp  task_formatter.hpp  task_repository.cpp  task_repository.hpp  task_service.cpp  task_service.hpp
src/infrastructure/db/: db_connection.cpp  db_connection.hpp  query_executor.cpp  query_executor.hpp  schema_manager.cpp  schema_manager.hpp
src/mcp/: mcp.cpp  mcp.hpp  mcp_config.hpp  mcp_protocol_handler.hpp  mcp_tool_executor.cpp  mcp_tool_executor.hpp  mcp_tool_registry.cpp
src/util/: agents.cpp  demo.cpp  executable_path.cpp  executable_path.hpp  formats.cpp  formats.hpp  roles.cpp  rules.cpp  rules.hpp
src/web/: filters.js  main.js  pagination.js  style.css  web.cpp  web.hpp  web_controllers.cpp  web_server.cpp  web_server.hpp
tests/: test_db.cpp  test_integration.cpp  test_mcp.cpp  test_milestone.cpp  test_note.cpp  test_phase.cpp  test_task.cpp
